# Lecture-Material

./: .markdownlint.json  .mdl.rb  .mdlrc  CONTRIBUTING.md  README.md  timetable.md
00_organization/: README.md  challenge_intro_slides.md  course_intro_slides.md  organizational_remarks_week10_slides.md  organizational_remarks_week3_slides.md  organizational_remarks_week7_slides.md  organizational_remarks_week8_slides.md  rse_basics_slides.md  topic_overview_demo.md
01_version_control/: README.md  cheat_sheet_exercise.md  git_basics_demo.md  git_exercise.md  git_quiz.md  intro_slides.md  merge_rebase_slides.md  my_favorite_neat_little_git_trick_demo.md  standards_slides.md  workflow_slides.md
02_virtualization_and_containers/: README.md  containers_demo.md  containers_slides.md  docker_demo.md  docker_quiz.md  docker_slides.md  intro_slides.md  singularity_demo.md  singularity_slides.md  vagrant_demo.md  vagrant_slides.md  virtualbox_demo.md  virtualbox_slides.md  virtualmachines_containers_exercise.md  virtualmachines_slides.md
03_building_and_packaging/: README.md  cmake_demo.md  cmake_exercise.md  cmake_more_demo.md  cmake_slides.md  cpack_demo.md  cpack_exercise.md  cpack_slides.md  exercise_cmake_text.md  intro_slides.md  linux_fundamentals_demo.md  linux_fundamentals_slides.md  make_demo.md  make_slides.md  packaging_cpack_debian_exercise.md  packaging_hpc_slides.md  packaging_spack_demo.md  packaging_spack_exercise.md  pip_demo.md  pypi_exercise.md  pypi_slides.md  spack_demo.md  spack_exercise.md  spack_slides.md  systempaths_and_librarytools_demo.md  systempaths_and_librarytools_slides.md
03_building_and_packaging/examples/cmake/: CMakeLists.txt  main.cpp
03_building_and_packaging/examples/cpack/: CMakeLists.txt  Dockerfile  inittimezone  main.cpp
03_building_and_packaging/examples/cpack/cmake/: CPackConfig.cmake
04_documentation/: README.md  code_documentation_tools_demo.md  code_documentation_tools_exercise.md  code_documentation_tools_slides.md  homepage_generators_slides.md  markup_languages_demo.md  markup_languages_slides.md  pandoc_demo.md  pandoc_slides.md  reviewing_exercise.md  technical_writing_demo.md  technical_writing_slides.md  tools_and_generators_exercise.md  tools_demo.md  tools_exercise.md  tools_slides.md  website_generators_demo.md  website_generators_slides.md
04_documentation/examples/sphinx/: README.rst  setup.cfg  setup.py
04_documentation/examples/sphinx/docs/tutorials/: overview.rst  tutorial_case1.rst  tutorial_case2.rst
04_documentation/examples/sphinx/src/solver/: diffusionsolver.py
05_testing_and_ci/: README.md  automation_demo.md  automation_exercise.md  automation_slides.md  boost_testing_demo.md  boost_testing_exercise.md  boost_testing_intro_demo.md  boost_testing_intro_slides.md  boost_testing_precice_demo.md  boost_testing_sidemade_demo.md  boost_testing_slides.md  github_actions_demo.md  github_actions_gitlab_ci_demo.md  github_actions_gitlab_ci_slides.md  github_actions_slides.md  gitlab_ci_demo.md  pytest_demo.md  (+6 more)
(+157 files in other folders)
