[metadata]
name = example-SSE-package
version = 0.0.1
author = Benjamin Uekermann
author_email = benjamin.uekermann@ipvs.uni-stuttgart.de
description = A package that solves some equation as part of an exercise of a lecture.
long_description = file: README.rst
long_description_content_type = text
url = https://github.com/Simulation-Software-Engineering/test-exercise-packaging
project_urls =
    Bug Tracker = https://github.com/Simulation-Software-Engineering/test-exercise-packaging/issues
    classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: NONE
        Operating System :: OS Independent

[options]
package_dir = solver
packages = find:
python_requires = >=3.6

[options.packages.find]
where = solver
